 - [ZBXNEXT-564] added new {IPADDRESS} and {HOST.PORT} macros in auto registration notifications (Sasha)
 - [ZBXNEXT-556] zabbix frontend translations are now handled by PHP gettext module (KB)
 - [ZBXNEXT-558] added support of monitoring auto-registered hosts with passive checks (Sasha)
 - [ZBXNEXT-512] redesign of unknown events (Aly,asaveljevs,Sasha)

Bug fixes:
 - [ZBX-3241] fixed incorrectly shortened popup texts
 - [ZBX-2647] Made some of hard coded strings translatable (KB)
 - [ZBX-3300] fixed valuemapid not removed from items table when valuemap deleted (Vedmak)
 - [ZBXNEXT-588] improved template, host, proxy form view, dashboard screen (Aly,Vedmak)
 - [ZBX-3149] allow to translate more strings in screen element 'Server info'; add support for translator comments (Richlv)
 - [ZBX-3248] fixed empty and duplicate map URL name handling (KB)
 - [ZBX-3190] fixed sql errors when processing proxy configuration (asaveljevs,Sasha)
 - [DEV-471] fixed sql scripts names consistency (Sasha)
 - [ZBXNEXT-538] include ibm_db2 upgrade patches in distribution package (Sasha)
 - [ZBX-3130] fixed bug when creating custom graph: host items now can be added (KB)

--------------------------------------------------------------------------------
Changes for 1.9.0

 - [DEV-477] added support of low-level discovery of file systems, network interfaces and SNMP OID's (Sasha,Vedmak)
 - [DEV-490] made graph legend optional (Aly)
 - [DEV-483] added templated screens (Aly)
 - [DEV-485] added multiple urls for map elements (Vedmak)
 - [DEV-471] field graph_theme.noneworktimecolor renamed to nonworktimecolor (Sasha)
 - [DEV-471] database integrity - added foreign keys (Sasha,Vedmak)
 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)